--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,9 +33,10 @@ stories-pydantic = "0.1.0"
 
 [tool.poetry.dev-dependencies]
 django-debug-toolbar = "3.2"
-django-extensions = "3.1.0"  # @todo #2 Setup django-extensions package.
+django-extensions = "3.1.0"
 django-extra-checks = "0.7.1"  # @todo #2 Setup django-extra-checks package.
 django-migration-linter = "2.4.0"  # @todo #2 Setup django-migration-linter package.
 django-querycount = "0.7.0"
 django-test-migrations = "1.0.0"
+ipython = "7.19.0"
 stories-django = "0.1.0"
