--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,4 +41,5 @@ django-querycount = "0.7.0"
 django-test-migrations = "1.0.0"
 ipython = "7.19.0"
 pre-commit = "2.9.3"
+pyupgrade = "2.7.4"
 stories-django = "0.1.0"
