--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ django-extra-checks = "0.7.1"  # @todo #2 Setup django-extra-checks package.
 django-migration-linter = "2.4.0"  # @todo #2 Setup django-migration-linter package.
 django-querycount = "0.7.0"
 django-test-migrations = "1.0.0"
+docformatter = "1.3.1"
 ipython = "7.19.0"
 pre-commit = "2.9.3"
 pyupgrade = "2.7.4"
