--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,20 @@ django-migration-linter = "2.4.0"  # @todo #2 Setup django-migration-linter pack
 django-querycount = "0.7.0"
 django-test-migrations = "1.0.0"
 docformatter = "1.3.1"
+flake8 = "3.8.4"
+flake8-2020 = "1.6.0"
+flake8-blind-except = "0.1.1"
+flake8-bugbear = "20.11.1"
+flake8-builtins = "1.5.3"
+flake8-comprehensions = "3.3.0"
+flake8-eradicate = "1.0.0"
+flake8-executable = "2.1.1"
+flake8-fixme = "1.1.1"
+flake8-mutable = "1.2.0"
+flake8-print = "4.0.0"
+flake8-pytest = "1.3"
+flake8-pytest-style = "1.3.0"
+flake8-tidy-imports = "4.2.0"
 ipython = "7.19.0"
 pre-commit = "2.9.3"
 pyupgrade = "2.7.4"
