--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ stories-pydantic = "0.1.0"
 [tool.poetry.dev-dependencies]
 bandit = "1.7.0"
 black = "20.8b1"
+coverage = "5.3"
 django-debug-toolbar = "3.2"
 django-extensions = "3.1.0"
 django-extra-checks = "0.7.1"  # @todo #2 Setup django-extra-checks package.
