--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - db
     volumes:
       - .:/app
-      - precommit:/root/.cache/pre-commit
+      - user:/root/.cache
     ports:
       - "8000:8000"
     environment:
@@ -24,5 +24,5 @@ services:
       POSTGRES_USER: cruftbot
       POSTGRES_PASSWORD: cruftbot
 volumes:
-  precommit:
+  user:
   db:
