--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,7 +38,7 @@ coverage = "5.3"
 django-debug-toolbar = "3.2"
 django-extensions = "3.1.0"
 django-extra-checks = "0.7.1"  # @todo #2 Setup django-extra-checks package.
-django-migration-linter = "2.4.0"  # @todo #2 Setup django-migration-linter package.
+django-migration-linter = "2.4.0"
 django-querycount = "0.7.0"
 django-test-migrations = "1.0.0"
 docformatter = "1.3.1"
