--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,7 @@ black = "20.8b1"
 coverage = "5.3"
 django-debug-toolbar = "3.2"
 django-extensions = "3.1.0"
-django-extra-checks = "0.7.1"  # @todo #2 Setup django-extra-checks package.
+django-extra-checks = "0.8.0"
 django-migration-linter = "2.4.0"
 django-querycount = "0.7.0"
 django-test-migrations = "1.0.0"
