--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ authors = ["Artem Malyshev <proofit404@gmail.com>"]
 python = "3.9.1"
 dependencies = "5.2.0"
 Django = "3.1.4"
-django-activity-stream = "0.9.0"  # @todo #2 Setup django-activity-stream package.
+django-activity-stream = "0.9.0"
 django-allauth = "0.44.0"  # @todo #2 Setup django-allauth package.
 django-axes = "5.9.1"  # @todo #2 Setup django-axes package.
 django-cors-headers = "3.5.0"  # @todo #2 Setup django-cors-headers package.
