--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ django-allauth = "0.44.0"  # @todo #2 Setup django-allauth package.
 django-axes = "5.9.1"  # @todo #2 Setup django-axes package.
 django-cors-headers = "3.5.0"  # @todo #2 Setup django-cors-headers package.
 django-csp = "3.7"  # @todo #2 Setup django-csp package.
-django-environ = "0.4.5"  # @todo #2 Setup django-environ package.
+django-environ = "0.4.5"
 django-feature-policy = "3.5.0"  # @todo #2 Setup django-feature-policy package.
 django-filter = "2.4.0"  # @todo #2 Setup django-filter package.
 django-guardian = "2.3.0"  # @todo #2 Setup django-guardian package.
