--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ dependencies = "5.2.0"
 Django = "3.1.4"
 django-activity-stream = "0.9.0"
 django-allauth = "0.44.0"  # @todo #2 Setup django-allauth package.
-django-axes = "5.9.1"  # @todo #2 Setup django-axes package.
+django-axes = "5.9.1"
 django-cors-headers = "3.5.0"  # @todo #2 Setup django-cors-headers package.
 django-csp = "3.7"  # @todo #2 Setup django-csp package.
 django-environ = "0.4.5"
