--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ django-http-referrer-policy = "1.1.1"  # @todo #2 Setup django-http-referrer-pol
 django-model-utils = "4.1.1"
 django-reversion = "3.0.8"  # @todo #2 Setup django-reversion package.
 django-silk = "4.1.0"  # @todo #2 Setup django-silk package.
-djangorestframework = "3.12.2"  # @todo #2 Setup djangorestframework package.
+djangorestframework = "3.12.2"
 drf-yasg = "1.20.0"  # @todo #2 Setup drf-yasg package.
 generics = "3.0.0"
 psycopg2-binary = "2.8.6"
