--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ python = "3.9.1"
 dependencies = "5.2.0"
 Django = "3.1.4"
 django-activity-stream = "0.9.0"
-django-allauth = "0.44.0"  # @todo #2 Setup django-allauth package.
+django-allauth = "0.44.0"
 django-axes = "5.9.1"
 django-cors-headers = "3.5.0"  # @todo #2 Setup django-cors-headers package.
 django-csp = "3.7"  # @todo #2 Setup django-csp package.
