--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ Django = "3.1.4"
 django-activity-stream = "0.9.0"
 django-allauth = "0.44.0"
 django-axes = "5.9.1"
-django-cors-headers = "3.5.0"  # @todo #2 Setup django-cors-headers package.
+django-cors-headers = "3.5.0"
 django-csp = "3.7"  # @todo #2 Setup django-csp package.
 django-environ = "0.4.5"
 django-feature-policy = "3.5.0"  # @todo #2 Setup django-feature-policy package.
