Dependabot should set reviewer (#105).

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,7 +4,13 @@ updates:
     directory: /
     schedule:
       interval: daily
+    reviewers:
+      - proofit404
+    labels:
   - package-ecosystem: npm
     directory: /
     schedule:
       interval: daily
+    reviewers:
+      - proofit404
+    labels:
