Correct Dependabot config (#107).

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,11 +6,11 @@ updates:
       interval: daily
     reviewers:
       - proofit404
-    labels:
+    labels: []
   - package-ecosystem: npm
     directory: /
     schedule:
       interval: daily
     reviewers:
       - proofit404
-    labels:
+    labels: []
