--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,6 +7,7 @@ updates:
     reviewers:
       - proofit404
     labels: []
+    open-pull-requests-limit: 1
   - package-ecosystem: npm
     directory: /
     schedule:
@@ -14,3 +15,4 @@ updates:
     reviewers:
       - proofit404
     labels: []
+    open-pull-requests-limit: 1
