--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,11 +3,11 @@ trigger:
 pool:
   vmImage: ubuntu-latest
 steps:
-# @todo #155 Install python.
+# @todo #155 Add UsePythonVersion@0 task.
 
-# @todo #155 Install ruby.
+# @todo #155 Add UseRubyVersion@0 task.
 
-# @todo #155 Install nodejs.
+# @todo #155 Add NodeTool@0 task.
 - script: true
   displayName: noop
 # @todo #44 Run scripts on continuous integration.
