--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,6 +8,7 @@ updates:
       - proofit404
     labels: []
     open-pull-requests-limit: 1
+  # @todo #46 Schedule ruby package updates.
   - package-ecosystem: npm
     directory: /
     schedule:
