--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ django-http-referrer-policy = "1.1.1"  # @todo #2 Setup django-http-referrer-pol
 django-model-utils = "4.1.1"
 django-reversion = "3.0.9"  # @todo #2 Setup django-reversion package.
 django-silk = "4.1.0"  # @todo #2 Setup django-silk package.
+django-split-settings = "1.0.1"
 djangorestframework = "3.12.2"
 drf-yasg = "1.20.0"
 generics = "3.3.0"
