--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
     "bootstrap": "4.6.0",
     "jquery": "3.6.0",
     "popper.js": "1.16.1"
+  },
+  "devDependencies": {
+    "jscpd": "3.3.25"
   }
 }
