--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "popper.js": "1.16.1"
   },
   "devDependencies": {
-    "jscpd": "3.3.25"
+    "jscpd": "3.3.25",
+    "remark-cli": "9.0.0",
+    "remark-lint": "8.0.0",
+    "remark-preset-lint-recommended": "5.0.0"
   }
 }
