--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,13 +13,15 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
         with:
-          python-version: 3.9
+          python-version: 3.9.2
       - uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 2.7
+          ruby-version: 2.7.0
       - uses: actions/setup-node@v2
         with:
-          node-version: 15.11
+          node-version: 15.11.0
       - run: curl -fsSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python
       - run: echo "${HOME}/.poetry/bin" >> ${GITHUB_PATH}
-# @todo #44 Run scripts on continuous integration.
+      - run: ./scripts/install
+      - run: ./scripts/check
+      # @todo #44 Run test script.
