--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,5 +1,6 @@
+---
 name: test
-on:
+'on':
   push:
     branches:
       - master
@@ -20,7 +21,7 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 15.11.0
-      - run: curl -fsSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python
+      - run: curl -fsSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python  # yamllint disable-line
       - run: echo "${HOME}/.poetry/bin" >> ${GITHUB_PATH}
       - run: ./scripts/install
       - run: ./scripts/check
