--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,3 +26,4 @@ jobs:
       - run: ./scripts/install
       - run: ./scripts/check
       # @todo #44 Run test script.
+      - run: ./scripts/review
