--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ django-guardian = "2.3.0"  # @todo #2 Setup django-guardian package.
 django-health-check = "3.16.3"  # @todo #2 Setup django-health-check package.
 django-http-referrer-policy = "1.1.1"  # @todo #2 Setup django-http-referrer-policy package.
 django-model-utils = "4.1.1"
+django-node-assets = "0.9.8"
 django-reversion = "3.0.9"  # @todo #2 Setup django-reversion package.
 django-silk = "4.1.0"  # @todo #2 Setup django-silk package.
 django-split-settings = "1.0.1"
