--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,9 +21,8 @@ services:
       - DJANGO_SETTINGS_MODULE=cruftbot.settings.development
       - PYTHONPATH=/app/
       - PYTHONUNBUFFERED=1
-      - CRUFTBOT_SECRET_KEY=qo!-i61otd!-z7f)erygb4!*8%zt7z10xh=n=^n64&46t_vgf)
-      - CRUFTBOT_DEBUG=True
       - CRUFTBOT_SITE_ID=1
+      - CRUFTBOT_SECRET_KEY=9ee0544eeb9a41b5917eeb23b2d37e2abaf13eaf8fc
       - CRUFTBOT_DATABASE_URL=psql://cruftbot:cruftbot@db:5432/cruftbot
   db:
     image: postgres
