--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ version = "0.1.0"
 [tool.poetry.dependencies]
 Django = "3.1.7"
 Jinja2 = "2.11.3"
+attrs = "20.3.0"
 dependencies = "6.0.1"
 django-activity-stream = "0.10.0"
 django-allauth = "0.44.0"
@@ -28,11 +29,8 @@ djangorestframework = "3.12.4"
 drf-yasg = "1.20.0"
 generics = "3.3.0"
 psycopg2-binary = "2.8.6"
-pydantic = "1.8.1"
-pydantic-initialized = "0.4.0"
 python = "3.9.2"
 stories = "4.0.0"
-stories-pydantic = "0.5.0"
 
 [tool.poetry.dev-dependencies]
 bandit = "1.7.0"
@@ -55,6 +53,7 @@ flake8-eradicate = "1.0.0"
 flake8-executable = "2.1.1"
 flake8-fixme = "1.1.1"
 flake8-mutable = "1.2.0"
+flake8-no-types = "1.1.1"
 flake8-print = "4.0.0"
 flake8-pytest = "1.3"
 flake8-pytest-style = "1.4.0"
@@ -62,6 +61,7 @@ flake8-tidy-imports = "4.2.1"
 ipython = "7.22.0"
 mkdocs = "1.1.2"
 pre-commit = "2.11.1"
+primitives = "1.2.0"
 pyupgrade = "2.11.0"
 reorder-python-imports = "2.4.0"
 stories-django = "0.1.0"
