--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,6 +57,7 @@ flake8-print = "4.0.0"
 flake8-pytest = "1.3"
 flake8-pytest-style = "1.4.0"
 flake8-tidy-imports = "4.2.1"
+hunter = "3.3.2"
 ipython = "7.22.0"
 mkdocs = "1.1.2"
 pre-commit = "2.11.1"
