--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,9 +27,11 @@ django-silk = "4.1.0"  # @todo #2 Setup django-silk package.
 djangorestframework = "3.12.4"
 drf-yasg = "1.20.0"
 generics = "3.3.1"
+marshmallow = "3.11.1"
 psycopg2-binary = "2.8.6"
 python = "3.9.4"
 stories = "4.0.0"
+stories-marshmallow = "0.2.0"
 
 [tool.poetry.dev-dependencies]
 bandit = "1.7.0"
@@ -48,6 +50,7 @@ flake8-blind-except = "0.2.0"
 flake8-bugbear = "21.3.2"
 flake8-builtins = "1.5.3"
 flake8-comprehensions = "3.4.0"
+flake8-docstrings = "1.6.0"
 flake8-eradicate = "1.0.0"
 flake8-executable = "2.1.1"
 flake8-fixme = "1.1.1"
@@ -66,4 +69,5 @@ pyupgrade = "2.11.0"
 reorder-python-imports = "2.4.0"
 stories-django = "0.1.0"
 toml-sort = "0.19.0"
+xenon = "0.7.1"
 yamllint = "1.26.1"
