--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "popper.js": "1.16.1"
   },
   "devDependencies": {
+    "danger": "10.6.4",
     "jscpd": "3.3.25",
     "remark-cli": "9.0.0",
     "remark-lint": "8.0.0",
-    "remark-preset-lint-recommended": "5.0.0"
+    "remark-preset-lint-recommended": "5.0.0",
+    "typescript": "4.2.4"
   }
 }
