Add danger notes (#92).

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,5 +27,6 @@ jobs:
       - run: ./scripts/check
       # @todo #44 Run test script.
       - run: ./scripts/review
+        # @todo #92 Run review script only for pull requests.
         env:
           GITHUB_TOKEN: ${{ secrets.DANGER_GITHUB_TOKEN }}
