--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,6 +12,9 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       pull-requests: write
+    # @todo #92 Danger can't leave comments on pull requests made by
+    #  non-collaborators. For example, dependabot message does not
+    #  appear.
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
