Setup django-permissions-policy package (#17).

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,13 +15,13 @@ django-axes = "5.14.0"
 django-cors-headers = "3.7.0"
 django-csp = "3.7"
 django-environ = "0.4.5"
-django-feature-policy = "4.0.0"  # @todo #2 Setup django-feature-policy package.
 django-filter = "2.4.0"  # @todo #2 Setup django-filter package.
 django-guardian = "2.3.0"  # @todo #2 Setup django-guardian package.
 django-health-check = "3.16.3"  # @todo #2 Setup django-health-check package.
 django-http-referrer-policy = "1.1.1"  # @todo #2 Setup django-http-referrer-policy package.
 django-model-utils = "4.1.1"
 django-node-assets = "0.9.9"
+django-permissions-policy = "4.0.0"
 django-reversion = "3.0.9"  # @todo #2 Setup django-reversion package.
 django-silk = "4.1.0"  # @todo #2 Setup django-silk package.
 djangorestframework = "3.12.4"
