--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ django-axes = "5.14.0"
 django-cors-headers = "3.7.0"
 django-csp = "3.7"
 django-environ = "0.4.5"
-django-filter = "2.4.0"  # @todo #2 Setup django-filter package.
+django-filter = "2.4.0"
 django-guardian = "2.3.0"  # @todo #2 Setup django-guardian package.
 django-health-check = "3.16.3"  # @todo #2 Setup django-health-check package.
 django-http-referrer-policy = "1.1.1"  # @todo #2 Setup django-http-referrer-policy package.
