--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ django-csp = "3.7"
 django-environ = "0.4.5"
 django-filter = "2.4.0"
 django-guardian = "2.3.0"
-django-health-check = "3.16.3"  # @todo #2 Setup django-health-check package.
+django-health-check = "3.16.3"
 django-http-referrer-policy = "1.1.1"  # @todo #2 Setup django-http-referrer-policy package.
 django-model-utils = "4.1.1"
 django-node-assets = "0.9.9"
