--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ django-http-referrer-policy = "1.1.1"  # @todo #2 Setup django-http-referrer-pol
 django-model-utils = "4.1.1"
 django-node-assets = "0.9.9"
 django-permissions-policy = "4.0.0"
-django-reversion = "3.0.9"  # @todo #2 Setup django-reversion package.
+django-reversion = "3.0.9"
 djangorestframework = "3.12.4"
 drf-yasg = "1.20.0"
 generics = "3.3.1"
