--- a/package.json
+++ b/package.json
@@ -2,9 +2,7 @@
   "name": "cruftbot",
   "private": true,
   "dependencies": {
-    "bootstrap": "5.0.0",
-    "jquery": "3.6.0",
-    "popper.js": "1.16.1"
+    "bulma": "0.9.2"
   },
   "devDependencies": {
     "danger": "10.6.4",
