--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,7 +30,7 @@ jobs:
       - run: echo "${HOME}/.poetry/bin" >> ${GITHUB_PATH}
       - run: ./scripts/install
       - run: ./scripts/check
-      # @todo #44 Run test script.
+      - run: ./scripts/test
       - run: ./scripts/review
         if: ${{ github.event_name == 'pull_request' }}
         env:
